--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,7 @@
 {
   "presets": [
-    "es2015"
+    "es2015",
+    "stage-2"
   ],
-  "plugins": ['transform-es2015-modules-umd']
+  "plugins": ["transform-es2015-modules-umd"]
 }
